# BAyPIGgies-debugging-talk

./: Eternal Sunshine of the Debugged Mind.html  Eternal Sunshine of the Debugged Mind.ipynb  README.md  divide_by_zero_script.py  pyproject.toml
.ipynb_checkpoints/: Eternal Sunshine of the Debugged Mind-checkpoint.ipynb
flask_app/: app.py  form.py
flask_app/templates/: submit.html
